# loom

./: .codecov.yml  .env.example  .gitignore  .loom-checkpoint  .loom-in-use  .loom-managed  .loom-test-failure-context.json  .mcp.json  .no-changes-needed  .shellcheckrc  AGENTS.md  AUDIT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DAEMON_DEV_MODE.md  DEVELOPMENT.md  DEV_WORKFLOW.md  DOCS_REVIEW.md  IMPLEMENTATION_CHECKLIST_ISSUE_96.md  ISSUE-terminal-session-missing-false-positives.md  MIGRATION.md  README.md  SECURITY.md  TESTING.md  WORKFLOWS.md  WORKPLAN.md  WORK_LOG.md  WORK_PLAN.md  biome.json  clean.sh  deny.toml  index.html  install.sh  loom.sh  node_modules  package-lock.json  package.json  playwright.config.ts  (+6 more)
.loom/: README.md  (+4 more)
loom-api/: Cargo.toml
loom-api/src/: main.rs
loom-daemon/: Cargo.toml  build.rs
loom-daemon/benches/: terminal_benchmarks.rs
loom-daemon/src/: activity.rs  capacity.rs  disk_headroom.rs  epic_state.rs  epic_supervisor.rs  errors.rs  event_bus.rs  forge_parser.rs  git_parser.rs  git_utils.rs  github_parser.rs  health_monitor.rs  init.rs  ipc.rs  issue_creation_mutex.rs  lib.rs  logging.rs  main.rs  main_health_gate.rs  metrics_collector.rs  phase_join.rs  role_validation.rs  sweep_registry.rs  terminal.rs  tokens.rs  types.rs  work_finder.rs  workspace_registry.rs  worktree_root.rs
loom-daemon/src/activity/: claims.rs  cost_analytics.rs  db.rs  metrics.rs  mod.rs  models.rs  prompts.rs  quality.rs  resource_usage.rs  schema.rs  stats.rs  test_parser.rs  tuning.rs
loom-daemon/src/init/: file_ops.rs  git.rs  mod.rs  post_init.rs  retired.rs  scaffolding.rs  templates.rs
loom-daemon/tests/: README.md  bump_md_doc_lint.rs  epic_conformance.rs  integration_basic.rs  integration_factory_reset.rs  integration_security.rs  integration_singleton_guard.rs  spawn_loop_deprecation_doc_lint.rs  sweep_md_doc_lint.rs  sweep_md_stage_minus_one_doc_lint.rs
loom-daemon/tests/common/: mod.rs
loom-tools/: .gitignore  .no-changes-needed  pyproject.toml
loom-tools/src/loom_tools/: __init__.py  agent_metrics.py  agent_monitor.py  agent_spawn.py  agent_wait.py  auto_merge.py  backlog.py  baseline_health_cli.py  checkpoints.py  claim.py  clean.py  cleanup.py  completions.py  daemon.py  daemon_cleanup.py  daemon_diagnostic.py  forge_cli.py  forge_snapshot.py  health_check.py  health_monitor.py  log_filter.py  milestones.py  orphan_recovery.py  recovery_stats.py  snapshot.py  state_machine.py  status.py  stuck_detection.py  stuck_formatting.py  sweep_experiment.py  test_failure_analysis.py  validate_phase.py  validate_state.py  worktree.py
loom-tools/src/loom_tools/common/: __init__.py  cached_forge.py  claude_config.py  config.py  deprecation.py  forge.py  git.py  gitea.py  github.py  issue_failures.py  logging.py  paths.py  repo.py  state.py  systematic_failure.py  time_utils.py  tmux_session.py  usage.py  worktree_safety.py
loom-tools/src/loom_tools/daemon_v2/: __init__.py  cli.py  command_poller.py  config.py  context.py  exit_codes.py  iteration.py  loop.py  signals.py
loom-tools/src/loom_tools/models/: __init__.py  agent_wait.py  base.py  baseline_health.py  daemon_state.py  health.py  progress.py  spawn_loop_state.py  stuck.py
loom-tools/tests/: test_agent_metrics.py  test_agent_monitor.py  test_agent_spawn.py  test_agent_wait.py  test_agent_wait_init.py  test_agent_wait_sync.py  test_api_error_detection.py  test_auth_cache_contention.py  test_backlog.py  test_baseline_health.py  test_budget_exhaustion.py  test_cached_forge.py  test_checkpoints.py  test_claim.py  test_claude_config.py  test_clean.py  test_cleanup.py  test_cleanup_progress.py  test_completions.py  test_config.py  test_daemon.py  test_daemon_cleanup.py  test_daemon_diagnostic.py  test_derive_commit_message.py  test_forge.py  test_forge_cli.py  test_forge_snapshot.py  test_gitea.py  test_github.py  test_health_check.py  test_health_monitor.py  test_installation_verification.py  test_issue_failures.py  test_iteration.py  test_log_filter.py  test_logging.py  test_loom_shepherd_preflight.py  test_milestones.py  test_models.py  test_orphan_recovery.py  (+27 more)
loom-tools/tests/common/: test_deprecation.py
loom-tools/tests/daemon/: test_command_poller.py  test_spawn_shepherd_from_signal.py
loom-tools/tests/daemon_v2/: __init__.py  test_auto_build_gate.py  test_config.py  test_context.py  test_dependencies.py  test_error_resilience.py  test_exit_codes.py  test_fast_path_assign.py  test_no_progress_detection.py  test_pending_spawns.py  test_shepherd_spawn.py  test_shepherd_stall_recovery.py  test_signals.py  test_stall_escalation.py  test_transient_error_recovery.py
loom-tools/tests/fixtures/: alerts.json  daemon-state.json  health-metrics.json  progress.json  stuck-history.json
loom-tools/tests/integration/: __init__.py  conftest.py  test_gitea_e2e.py
loom-tools/tests/shepherd/: __init__.py  test_bash_parity.py  test_builder_escape_detection.py  test_builder_reproducibility.py  test_cli.py  test_config.py  test_context.py  test_contracts.py  test_degraded_session_detection.py  test_doctor_phase.py  test_errors.py  test_exit_codes.py  test_issue_quality.py  test_labels.py  test_phases.py  test_postmortem.py  test_rebase.py  test_reflection.py
loom-tools/tests/tokens/: conftest.py  test_agent_spawn_integration.py  test_allowlist.py  test_bad_tokens.py  test_bootstrap.py  test_check.py  test_failure_counts.py  test_monitor.py  test_rotation.py  test_select.py
quickstarts/desktop/src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: daemon_client.rs  daemon_manager.rs  dependency_checker.rs  logging.rs  main.rs  mcp_watcher.rs  menu.rs
src-tauri/src/commands/: ab_testing.rs  activity.rs  config.rs  correlation.rs  daemon.rs  filesystem.rs  forge.rs  github.rs  mod.rs  optimization.rs  prediction.rs  project.rs  system.rs  telemetry.rs  template_generation.rs  terminal.rs  ui.rs  weekly_report.rs  workspace.rs
src-tauri/tests/: activity_schema_test.rs
(+789 files in other folders)
