[package]
name = "loom-api"
version = "0.1.0"
edition = "2021"
description = "External REST API for Loom analytics data access"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
rusqlite = { version = "0.37", features = ["bundled"] }
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.24"
tower = { version = "0.5", features = ["util"] }

[[bin]]
name = "loom-api"
path = "src/main.rs"
