[package]
name = "loom-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
log = "0.4"
env_logger = "0.11"
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
base64 = "0.21"
rusqlite = { version = "0.32", features = ["bundled"] }
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
serial_test = "3.0"
criterion = "0.5"

[[bench]]
name = "terminal_benchmarks"
harness = false
