[package]
name = "loom-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
log = "0.4"
env_logger = "0.11"
uuid = { version = "1.19", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0"
base64 = "0.22"
rusqlite = { version = "0.37", features = ["bundled"] }
regex = "1.10"
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
tempfile = "3.24"
tokio-test = "0.4"
serial_test = "3.0"
criterion = "0.8"

[[bench]]
name = "terminal_benchmarks"
harness = false
