[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "loom-tools"
version = "0.1.0"
description = "Shared Python utilities for Loom orchestration scripts"
requires-python = ">=3.10"
license = "MIT"

[project.scripts]
loom-shepherd = "loom_tools.shepherd.cli:main"
loom-agent-monitor = "loom_tools.agent_monitor:main"
loom-daemon-diagnostic = "loom_tools.daemon_diagnostic:main"
loom-daemon-loop = "loom_tools.daemon:main"
loom-stuck-detection = "loom_tools.stuck_detection:main"
loom-claim = "loom_tools.claim:main"
loom-check-completions = "loom_tools.completions:main"
loom-clean = "loom_tools.clean:main"
loom-worktree = "loom_tools.worktree:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
