[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "loom-tools"
version = "0.1.0"
description = "Shared Python utilities for Loom orchestration scripts"
requires-python = ">=3.10"
license = "MIT"

[project.scripts]
loom-shepherd = "loom_tools.shepherd.cli:main"
loom-agent-wait = "loom_tools.agent_wait:main"
loom-agent-monitor = "loom_tools.agent_monitor:main"
loom-daemon-diagnostic = "loom_tools.daemon_diagnostic:main"
loom-daemon-loop = "loom_tools.daemon:main"
loom-stuck-detection = "loom_tools.stuck_detection:main"
loom-claim = "loom_tools.claim:main"
loom-check-completions = "loom_tools.completions:main"
loom-clean = "loom_tools.clean:main"
loom-milestone = "loom_tools.milestones:main"
loom-worktree = "loom_tools.worktree:main"
loom-recover-orphans = "loom_tools.orphan_recovery:main"
loom-validate-state = "loom_tools.validate_state:main"
loom-status = "loom_tools.status:main"
loom-daemon-cleanup = "loom_tools.daemon_cleanup:main"
loom-agent-metrics = "loom_tools.agent_metrics:main"
loom-validate-phase = "loom_tools.validate_phase:main"
# DEPRECATED: loom-recovery-stats removed - auto-recovery no longer generates events
# loom-recovery-stats = "loom_tools.recovery_stats:main"
loom-agent-spawn = "loom_tools.agent_spawn:main"
loom-health-monitor = "loom_tools.health_monitor:main"
loom-snapshot = "loom_tools.snapshot:main"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
