[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.5", features = [] }

[dependencies]
serde_json = { workspace = true }
serde = { workspace = true }
tauri = { version = "1.8.1", features = [ "cli", "dialog-ask", "fs-all", "path-all", "dialog-message", "dialog-open", "shell-open-api"] }
tokio = { workspace = true }
anyhow = { workspace = true }
dirs = "5.0"
dotenvy = "0.15"
chrono = "0.4"
notify = { version = "6", default-features = false, features = ["macos_fsevent"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
