[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = { workspace = true }
serde = { workspace = true }
tauri = { version = "2", features = [] }
tauri-plugin-cli = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tokio = { workspace = true }
anyhow = { workspace = true }
dirs = "6.0"
dotenvy = "0.15"
chrono = "0.4"
notify = { version = "8", default-features = false, features = ["macos_fsevent"] }
rusqlite = { version = "0.37", features = ["bundled"] }
regex = "1"
md5 = "0.8"

[dev-dependencies]
tempfile = "3.24"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
